[metadata]
name = starter-jupyter
description = Meta-package for setting up a decent Jupyter environment
long_description = file: README.md
author = Jeremy Goh
author_email = 30731072+thatlittleboy@users.noreply.github.com
license = MIT
url = https://github.com/thatlittleboy/starter-jupyter
version = 2023.06.13

# Important: please don't update `python_requires` or remove specs for Python
#            versions that are no longer supported. This may break installing
#            older versions of packages that depend on this meta-package!
[options]
python_requires = >=3.7
install_requires =
    # jupyter core / ipython
    jupyterlab>3,<4
    ipywidgets
    # jupyter extensions
    jupyterlab_vim
    jupyterlab-snippets
    jupyterlab-lsp
    jupyterlab-code-formatter
    jupyterlab-spreadsheet-editor
    # [lsp]
    python-lsp-server
    python-lsp-ruff
    # [code-formatter]
    black
    # misc packages
    rich
    pandas
    pyarrow
    polars
    matplotlib
    scikit-learn
